# archguard

./: .archguard.yml  .gitignore  JULES_PROMPT.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
archguard/: boundary_checker.py  cli.py  config.py  contract_checker.py  cycle_detector.py  display.py  explainer.py  import_scanner.py  schema.py
tests/: test_boundary_checker.py  test_contract_checker.py  test_cycle_detector.py  test_explainer.py  test_import_scanner.py  test_schema.py
tests/fixtures/: .archguard.yml  breaking_diff.patch
tests/fixtures/sample_arch/auth_service/: api.py
tests/fixtures/sample_arch/auth_service/clients/: user_client.py
tests/fixtures/sample_arch/notification_service/: sender.py
tests/fixtures/sample_arch/payment_service/: api.py  models.py
tests/fixtures/sample_arch/user_service/: api.py
tests/fixtures/sample_arch/user_service/auth/: verify.py
